--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "executor"
+name = "parser"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-datagram = { path = "../datagram" }
