--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ cli = { path = "./cli" }
 datagram = { path = "./datagram" }
 
 [workspace]
-members = [ "common", "sdb", "sdb_config", "cli", "datagram" , "graph", "api", "utils", "cmd", "planner", "executor", "parser"]
+members = [ "common", "sdb", "sdb_config", "cli", "datagram" , "graph", "api", "utils", "cmd", "planner", "executor", "parser", "tokenize"]
