--- a/tokenize/Cargo.toml
+++ b/tokenize/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "parser"
+name = "tokenize"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-tokenize = { path = "../tokenize" }
