--- a/planner/Cargo.toml
+++ b/planner/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+common = { path = "../common" }
+parser = { path = "../parser" }
+cmd = { path = "../cmd" }
+tokenize = { path = "../tokenize" }
