--- a/datagramv2/Cargo.toml
+++ b/datagramv2/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "cmd"
+name = "datagramv2"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-common = { path = "../common" }
 utils = { path = "../utils" }
-tokenize = { path = "../tokenize" }
+common = { path = "../common" }
