--- a/planner/Cargo.toml
+++ b/planner/Cargo.toml
@@ -9,3 +9,4 @@ parser = { path = "../parser" }
 cmd = { path = "../cmd" }
 tokenize = { path = "../tokenize" }
 utils = { path = "../utils" }
+datagramv2 = { path = "../datagramv2" }
