--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ planner = { path = "./planner" }
 
 [workspace]
 members = [ "common", "sdb", "sdb_config", "cli", "datagram" , "graph", "api", "utils", "cmd", "planner", 
-"executor", "parser", "tokenize", "datagramv2", "adjacency_matrix"]
+"executor", "parser", "tokenize", "datagramv2", "adjacency_matrix", "result"]
