build: added crates.io information; switch to lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "subgraphdb"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2024"
+authors = ["Chris Myers <christopherbm@gmail.com>"]
+categories = ["database", "graph", "data"]
+description = "A flat-file graph database"
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/subgraph/subgraphdb"
 
 [dependencies]
 common = { path = "./common" }
