build: fixed slugs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "subgraphdb"
 version = "0.2.0"
 edition = "2024"
 authors = ["Chris Myers <christopherbm@gmail.com>"]
-categories = ["database", "graph", "data"]
+categories = ["database"]
 description = "A flat-file graph database"
 license = "Apache-2.0"
 readme = "README.md"
